--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You</title>
+    <title>Thank You!</title>
 </head>
 <body>
     <div>
-        Thank you <%= contact.firstName %> <%= contact.lastName %>
+        Thank you, <%= contact.firstName %> <%= contact.lastName %> <br>
+        Your e-mail is: <%= contact.email %>
     </div>
 </body>
 </html>
